<resources>
    <string name="app_name">CodeTest InigoFlores</string>
    <string name="action_edit_contact">Edit</string>
    <string name="action_delete_contact">Delete</string>
    <string name="name_card">Name</string>
    <string name="phone_card">Phone:</string>
    <string name="last_name_card">Last Name</string>
    <string name="filename_maxlines">1</string>
    <string name="toolbar_title_mainactivity"> Contacts</string>
    <string name="nametitle_editcontact">Name:</string>
    <string name="lastnametitle_editcontact">Last Name:</string>
    <string name="phones_editcontact">Phones:</string>
    <string name="addresses_editcontact">Addresses:</string>
    <string name="emails_editcontact">Emails:</string>
    <string name="phonehint_editcontact">phone...</string>
    <string name="addresshint_editcontact">address...</string>
    <string name="emailhint_editcontact">email...</string>
    <string name="search_hint">Search</string>
    <string name="text_header_contact">A</string>
    <string name="noContactsList">No Contacts</string>
    <string name="bt_save_contact">Save</string>
    <string name="bithdate_editcontact">Date of Birth:</string>
</resources>
