<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/containerCard"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <android.support.v7.widget.CardView
        xmlns:cardview="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pictureCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_cardview"
        cardview:cardCornerRadius="@dimen/cornerradius_cardview"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/backgroundtext_card">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/contactImageCard"
                    android:layout_width="@dimen/dimen_circleimageprofile"
                    android:layout_height="@dimen/dimen_circleimageprofile"
                    android:src="@color/colorPrimary"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="@dimen/marginleft_circleimageprofile"
                    android:elevation="@dimen/elevation_circleimageprofile"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/text_cardview_margin"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/contactNameCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_card"
                        android:textColor="@android:color/black"
                        android:maxLines="@string/filename_maxlines"
                        android:textSize="@dimen/textsize_username_card"
                        />

                    <TextView
                        android:id="@+id/contactLastNameCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name_card"
                        android:textColor="@android:color/black"
                        android:maxLines="@string/filename_maxlines"
                        android:textSize="@dimen/textsize_username_card"
                        android:paddingLeft="@dimen/marginleft_text"
                        />

                </LinearLayout>

            </LinearLayout>
        </FrameLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>