<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        xmlns:cardview="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pictureCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/header_section"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_section_height"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="@color/lightGray">

                <TextView
                    android:id="@+id/contactHeaderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_header_contact"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/header_margin_left"
                    style="@style/AppFontStyle"
                    />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/containerCard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_cardview"
                android:layout_below="@+id/header_section"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@color/backgroundtext_card">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="@dimen/marginleft_circleimageprofile"
                        >

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/contactImageCard"
                            android:layout_width="@dimen/dimen_circleimageprofile"
                            android:layout_height="@dimen/dimen_circleimageprofile"
                            android:src="@color/colorPrimary"
                            android:elevation="@dimen/elevation_circleimageprofile"
                            />

                        <TextView
                            android:id="@+id/initialsContactCircle"
                            android:elevation="@dimen/elevation_initialsname"
                            android:layout_width="@dimen/dimen_circleimageprofile"
                            android:layout_height="@dimen/dimen_circleimageprofile"
                            android:gravity="center_vertical"
                            android:textColor="#FFFFFF"
                            style="@style/AppFontStyle"
                            android:textAlignment="center"
                            />

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/text_cardview_margin"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:id="@+id/contactNameCard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_card"
                            android:textColor="@android:color/black"
                            android:maxLines="@string/filename_maxlines"
                            android:textSize="@dimen/textsize_username_card"
                            />

                        <TextView
                            android:id="@+id/contactLastNameCard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/last_name_card"
                            android:textColor="@android:color/black"
                            android:maxLines="@string/filename_maxlines"
                            android:textSize="@dimen/textsize_username_card"
                            android:paddingLeft="@dimen/marginleft_text"
                            />

                    </LinearLayout>

                </LinearLayout>
            </FrameLayout>

        </RelativeLayout>


    </LinearLayout>
</RelativeLayout>