<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.inigo.servicefusiontestcode.contact.view.CreateUpdateContactActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/tv_nameTitle"
                    style="@style/AppFontStyle"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/nametitle_editcontact"
                    android:textAlignment="textEnd"
                    android:gravity="end"
                    />

                <EditText
                    android:id="@+id/et_contactName"
                    style="@style/AppFontStyle"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/marginleft_edittextcontact"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/tv_lastNameTitle"
                    style="@style/AppFontStyle"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/lastnametitle_editcontact"
                    android:textAlignment="textEnd"
                    android:gravity="end"
                    />

                <EditText
                    android:id="@+id/et_contactLastName"
                    style="@style/AppFontStyle"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/marginleft_edittextcontact"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margintop_phonesedit"
                >

                <TextView
                    android:id="@+id/tv_birthDateTitle"
                    style="@style/AppFontStyle"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/bithdate_editcontact"
                    android:textAlignment="textEnd"
                    android:gravity="end"/>

                <LinearLayout
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-11dp"
                    android:layout_marginRight="@dimen/marginleft_edittextcontact"
                    >

                    <LinearLayout
                        android:layout_gravity="top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <EditText
                            android:id="@+id/et_month_date"
                            style="@style/AppFontStyle"
                            android:layout_width="50dp"
                            android:hint="MM"
                            android:textAlignment="center"
                            android:inputType="number"
                            android:layout_height="wrap_content"
                            />

                        <TextView
                            style="@style/AppFontStyle"
                            android:layout_width="10dp"
                            android:textAlignment="center"
                            android:text="/"
                            android:layout_height="wrap_content"
                            />

                        <EditText
                            android:id="@+id/et_day_date"
                            style="@style/AppFontStyle"
                            android:layout_width="50dp"
                            android:hint="DD"
                            android:inputType="number"
                            android:textAlignment="center"
                            android:layout_height="wrap_content"
                            />

                        <TextView
                            style="@style/AppFontStyle"
                            android:layout_width="10dp"
                            android:textAlignment="center"
                            android:text="/"
                            android:layout_height="wrap_content"
                            />

                        <EditText
                            android:id="@+id/et_year_date"
                            style="@style/AppFontStyle"
                            android:layout_width="100dp"
                            android:textAlignment="center"
                            android:hint="YYYY"
                            android:inputType="number"
                            android:layout_height="wrap_content"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margintop_phonesedit"
                >

                <TextView
                    android:id="@+id/tv_phonesTitle"
                    style="@style/AppFontStyle"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/phones_editcontact"
                    android:textAlignment="textEnd"
                    android:gravity="end"/>

                <LinearLayout
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:layout_marginRight="@dimen/marginleft_edittextcontact"
                    >

                    <Button
                        android:id="@+id/addPhone"
                        android:layout_width="@dimen/addbutton_phonecontact"
                        android:layout_height="@dimen/addbutton_phonecontact"
                        android:background="@drawable/icn_add"
                        />

                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/editPhonesRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margintop_phonesedit"
                >

                <TextView
                    android:id="@+id/tv_addressesTitle"
                    style="@style/AppFontStyle"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/addresses_editcontact"
                    android:textAlignment="textEnd"
                    android:gravity="end"/>

                <LinearLayout
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:layout_marginRight="@dimen/marginleft_edittextcontact"
                    >

                    <Button
                        android:id="@+id/addAddress"
                        android:layout_width="@dimen/addbutton_addresscontact"
                        android:layout_height="@dimen/addbutton_addresscontact"
                        android:background="@drawable/icn_add"
                        />

                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/editAddressesRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margintop_phonesedit"
                >

                <TextView
                    android:id="@+id/tv_emailsTitle"
                    style="@style/AppFontStyle"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/emails_editcontact"
                    android:textAlignment="textEnd"
                    android:gravity="end"/>

                <LinearLayout
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:layout_marginRight="@dimen/marginleft_edittextcontact"
                    >

                    <Button
                        android:id="@+id/addEmail"
                        android:layout_width="@dimen/addbutton_emailcontact"
                        android:layout_height="@dimen/addbutton_emailcontact"
                        android:background="@drawable/icn_add"
                        />

                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/editEmailsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                >

            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_save_button"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                </LinearLayout>

                <Button
                    android:id="@+id/bt_saveContact"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bt_save_contact"
                    style="@style/AppTheme.Button"
                    />

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
